--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,12 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>net.diegolemos</groupId>
-  <artifactId>bonus-calculation-problem</artifactId>
+  <artifactId>bonus-calculator</artifactId>
   <version>1.0-SNAPSHOT</version>
+
   <packaging>jar</packaging>
 
-  <name>bonus-calculation-problem</name>
+  <name>The Bonus Calculation Problem</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
